Knife cut creates polygons with inverted normals #48716

Closed
opened 2016-06-23 11:06:12 +02:00 by Alex · 4 comments

Since my last post in #48683 wasn't answered, I have decided to create a new report so it will be easier to keep track on things.

System Information
Intel Core i7, 8 Gb RAM, AMD Radeon HD 7700
Windows 7 x64

Blender Version
Broken: 2.77 fad0c33
Worked: 2.76b f337fea

Short description of error
After the recent changes in Knife tool, a knife cut creates polygons with inverted normals.

Exact steps for others to reproduce the error
Create a default UV Sphere and try to cut some polygons in a way like on provided picture. As a result you will have one of the corners with inverted normal. There was a hole there, it is gone now, but now there is an inverted polygon on its place. You can use my test file: open the file and try to cut selected polygon or any of its neighbors.
{F318376}knife_cut_inverted_normal.blend

Since my last post in #48683 wasn't answered, I have decided to create a new report so it will be easier to keep track on things. **System Information** Intel Core i7, 8 Gb RAM, AMD Radeon HD 7700 Windows 7 x64 **Blender Version** Broken: 2.77 fad0c33 Worked: 2.76b f337fea **Short description of error** After the recent changes in Knife tool, a knife cut creates polygons with inverted normals. **Exact steps for others to reproduce the error** Create a default UV Sphere and try to cut some polygons in a way like on provided picture. As a result you will have one of the corners with inverted normal. There was a hole there, it is gone now, but now there is an inverted polygon on its place. You can use my test file: open the file and try to cut selected polygon or any of its neighbors. {[F318376](https://archive.blender.org/developer/F318376/knife_cut_inverted_normal.png)}[knife_cut_inverted_normal.blend](https://archive.blender.org/developer/F318378/knife_cut_inverted_normal.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst
Campbell Barton self-assigned this 2016-06-23 15:04:20 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 73a9c56607

This issue was referenced by 73a9c56607272be410b8e87336f4e05d87a44ed5
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48716
No description provided.