Fix T48716: Knife cut creates inverted normals

In the case of having 3+ boundary edges, we need to find the best.